# Nucleation_Dynamics

./: .gitignore  README.md  cluster.py  cluster_dynamics.ipynb  cluster_physics.py  cluster_sim.py  cluster_simulation.ipynb  critical_parameters.ipynb  hon.py  properties.py  pyproject.toml  run_cluster_dynamics.py
examples/: cluster_dynamics.ipynb  cr_sol.csv  cr_sol2.csv  diffusivity_h.csv  iron_sol.csv  plot_utils.py  solver_comparison.ipynb
examples/data/: LiD.json  LiH.json  LiT.json  chromium.json  iron.json  lithium_disillicate.json  lithium_disillicate_100n_laszlo.csv  lithium_disillicate_100n_laszlo_steady.csv  lithium_disillicate_40n_laszlo.csv  lithium_disillicate_40n_total_number_absorbing.csv  lithium_disillicate_gree_energy_40n_laszlo.csv
julia_version/: ClusterDynamics.jl  ClusterProperties.jl  dynamics.jl  test.ipynb
report/: cyclone_draft_revAFW.pdf:Zone.Identifier  cyclone_modelling.tex  doc_body.tex  glossary.tex  idom_report.aux  idom_report.bbl  idom_report.bcf  idom_report.blg  idom_report.fdb_latexmk  idom_report.fls  idom_report.lof  idom_report.lot  idom_report.out  idom_report.run.xml  idom_report.tex  idom_report.toc  rad_charts.pptx  reference.bib
src/Nucleation_Dynamics/: __init__.py  closed_dynamics.py  cluster_properties.py  dynamics.py  hon.py  julia_dynamics.py  scipy_dynamics.py
src/Nucleation_Dynamics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
